/*
Copyright Ziggurat Corp. 2017 All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/inklabsfoundation/inkchain/protos/ledger/eftranset/kveftranset";
option java_package = "org.inklabsfoundation.inkchain.protos.ledger.eftranset.kveftranset";

package kveftranset;

message KVEfTranSet {
    repeated KVEfTrans eftrans = 1;
}
message KVEfTrans {
    string to = 1;
    string balance_type = 2;
    bytes amount = 3;
}